force-app/main/default/objects/Order_Bike_KPI__c/Order_Bike_KPI__c.object-meta.xml
<CustomObject>
    <label>Order Bike KPI</label>
    <nameField>
        <label>Order Bike KPI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Bike KPI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>