force-app/main/default/objects/Order_Bike_KPI__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Order Bike KPI</relationshipLabel>
    <relationshipName>Order_Bike_KPI</relationshipName>
    <type>Lookup</type>
</CustomField>